Add pdf-jdk8-compat branch: iText 7.1.18 + JDK 8 syntax in PdfService
For company intranet projects still on JDK 8. Changes vs main:
- itext7-core 8.0.5 -> 7.1.18 (last line supporting JDK 8)
- html2pdf 5.0.5 -> 4.0.5 (paired with iText 7.1.x)
- font-asian follows itext.version, also drops to 7.1.18
- PdfService.java HTML_TEMPLATE: text block -> string concatenation
- PdfService.java .formatted() calls -> String.format()
- Lombok stays 1.18.38 (still JDK 8 compatible)
- Spring Boot stays 3.3.5 (this branch still requires JDK 17 to build,
  but the resulting PdfService.java + iText deps are JDK 8 deployable)

mvn compile verified clean on this branch.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>